added  tabbled layout to nearme added map to map view added markers to map view created simple googleplace parsing simple google place json. added up navigation to fav places and near me replaced settings activity with blank activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="title_activity_day_plan">Your day plan...</string>
     <string name="title_activity_fav_places">Your Favourites</string>
     <string name="title_activity_postcard">Postcards are fun!</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_settings">Preferences</string>
     <string name="places_key">AIzaSyB3Qirj2H1pL_63c7yXcMIMCjcQUinyHS4</string>
 
     <!-- Strings related to Settings -->
