--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,35 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="radiusPreference">
+        <item>1 mile</item>
+        <item>2 miles</item>
+        <item>3 miles</item>
+        <item>4 miles</item>
+        <item>5 miles</item>
+    </string-array>
+
+    <string-array name="culinaryPreference">
+        <item>Vegan</item>
+        <item>Vegetarian</item>
+        <item>No Preference</item>
+    </string-array>
+
+    <string-array name="costPreference">
+        <item>£</item>
+        <item>££</item>
+        <item>£££</item>
+    </string-array>
+
+    <string-array name="activityPreference">
+        <item>Fun</item>
+        <item>Relaxing</item>
+        <item>Group Activity</item>
+        <item>Adventurous</item>
+        <item>Extreme</item>
+    </string-array>
+
+
     <string-array name="multi_select_list_preference_default_value" />
 
     <string name="pref_title_system_sync_settings">System sync settings</string>
