--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_refresh">Refresh</string>
     <string name="home_greeting">What do you feel like doing today?</string>
 
     <!-- TODO: Remove or change this placeholder text -->
